# sentinet_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.todo  README.md  a.out  build.sh  compile.sh  example_with_proxy  kermit_kernel  kermit_proxy  main.c  main.cpp  pipe  proxy  proxy.cpp  run  script.sh
.cmake/: GitUtils.cmake  cpp.cmake  deps.cmake
.opencv_calibration/: 1.xml  2.xml  3.xml  calibrate_camera  default.xml  out_camera_data.xml  out_camera_data2.xml
.scripts/: common.sh  git_init.sh  git_rebase.sh  git_update.sh  linker.sh  menu.sh  scan_option.sh
include/control/: NetworkPatterns.hpp  ZMQControlClient.hpp  zhelpers.hpp
include/core/: types.h
include/core/control/: ControlBaseInterface.hpp  ControlClientInterface.hpp
include/core/kernel/: InputOutputInterface.hpp
include/core/messages/pipe/: FilterInterface.hpp  PipeInterface.hpp  ProxyInterface.hpp
include/core/utils/: functional.hpp  logging.hpp  random.hpp  strings.hpp
include/kernel/: Defaults.hpp  KermitControlModule.hpp  KermitKernel.hpp  KermitOutputInterface.hpp  STDOutKermitOI.hpp  SerialPort.hpp  Socket.hpp
include/messages/common/: CmdVel.hpp
include/messages/debug/: DebugMessage.h
include/messages/factory/: MessageFactory.hpp
include/messages/pipe/: ExamplePipe.cpp  SimpleFilter.hpp  SimpleFilter2.hpp  SimpleNumberFilter.hpp  ZMQMessagePipe.hpp  ZMQProxy.hpp  ZMQPubSubProxy.hpp  ZMQServerProxy.hpp
include/messages/telemetry/: Telemetry.hpp
include/proto/common/: cmd_vel.pb.h
include/proto/debug/: debug.pb.h  other.pb.h
include/proto/telemetry/: telemetry.pb.h
include/proto/test/: test.pb.h
include/scpp/: common.h
include/scpp/control/: NetworkPatterns.hpp  RMTControlClient.hpp  ZMQCC.hpp  ZMQControlClient.hpp  zhelpers.hpp
include/scpp/controllers/apriltags/: AprilDetector.hpp  Localizer.hpp  a.out  april.cc  april_follower.h
include/scpp/controllers/helpers/: bot_constants.h  helper.h
include/scpp/controllers/wii/: wiibutton.h  wiimote.h
include/scpp/core/: types.h
include/scpp/core/control/: ControlBaseInterface.hpp  ControlClientInterface.hpp
include/scpp/core/messages/: MessageInterface.hpp
include/scpp/core/messages/pipe/: FilterInterface.hpp  PipeInterface.hpp  ProxyInterface.hpp
include/scpp/core/utils/: arg_parse.hpp  functional.hpp  logging.hpp  strings.hpp
include/scpp/kernel/: Defaults.hpp  KermitControlModule.hpp  KermitKernel.hpp  KermitKernel.temp  KermitNetworkInterface.hpp  STDOutKermitOI.hpp  SerialPort.hpp  Socket.hpp  TelemetryHandler.hpp  serial.h  sockets.h
include/scpp/localizer/: PosLocalizer.hpp
include/scpp/localizer/apriltags/: AprilDetector.hpp
include/scpp/messages/: MessageGoals  checksum.h  data.h  data_message.h  data_message_keys.h  ping_message.h  ping_message_keys.h  rmt_messages.h  standards.h
include/scpp/messages/pipe/: EKFLocalizer.hpp  SimpleFilter.hpp  SimpleFilter.temp  SimpleFilter2.temp  Simple_Localizer.hpp  TransformationFilter.hpp  TransformationFilter.temp  ZMQMessagePipe.hpp  ZMQPubSubProxy.hpp  ZMQServerProxy.hpp
include/scpp/session/: SCPPSession.hpp
src/: CMakeLists.txt
src/apriltag/: AprilDetector.cpp  CMakeLists.txt  Localizer.cpp
src/control/: CMakeLists.txt  NetworkPatterns.cpp  RMTControlClient.cpp  ZMQControlClient.cpp
src/controllers/: CMakeLists.txt  wiimote.cpp
src/core/: CMakeLists.txt  common.cpp
src/core/utils/: file_system.cpp
src/impl/: CMakeLists.txt  april.cpp  example.cpp  kermit_control.cpp  kermit_kernel.cpp  kermit_proxy.cpp  serial_test.c
src/impl/controller_examples/: wiitest.cpp
src/impl/examples/: all_in_one.cpp  all_in_one_type_two.cpp  kermit.cpp  pipe.cpp  pipe2.cpp  proxy.cpp
src/impl/installable/: a.out  proxy.cpp
src/impl/kernel_examples/: serial_example.cpp
src/impl/message_examples/: cmd_vel.c  main.c  main2.c  main3.c  performance.c  ping.c
src/impl/session/: Session.cpp
src/kernel/: CMakeLists.txt  KermitControlModule.cpp  KermitControlModule.temp  KermitKernel.cpp  KermitKernel.temp  KermitNetworkInterface.cpp  SerialPort.cpp  serial.c
src/localizer/: AprilDetector.cpp  PosLocalizer.cpp
src/messages/: CMakeLists.txt  DebugMessage.cpp  DriveTrain.cpp  MessageFactory.cpp  Telemetry.cpp  checksum.c  data.c  data_messages.c  ping_message.c  rmt_messages.c
src/messages/pipe/: PipeInterface.cpp  PipeInterface.temp  ProxyInterface.cpp  SimpleFilter.cpp  SimpleFilter2.cpp  SimpleFilter2.temp  SimpleNumberFilter.cpp  Simple_Localizer.cpp  TransformationFilter.cpp  TransformationFilter.temp  ZMQPubSubProxy.cpp  ZMQServerProxy.cpp
src/session/: SCPPSession.cpp  SCPPSession.hpp  main.cpp
tests/: CMakeLists.txt  NetworkPatterns.cpp  NetworkPatterns.hpp  main.cpp  unit_tests
tests/control/: NetworkPatterns.cpp  ZMQControlClient.cpp  ZMQControlClient.hpp
tests/messages/: cmd_vel.cpp  data.cpp  imu_data.cpp
